--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>英语思维导图 - 初中语法梳理</title>
 
   <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
@@ -84,7 +85,7 @@
         </a>
   
         <!-- Github -->
-        <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/jinjieup-shop" role="button">
+        <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/jinjieup" role="button">
           <i class="bi bi-github"></i>
         </a>
       </section>
