--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="row">
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="./images/1-1.png" class="card-img-top" style="height: 7rem;" alt="...">
+          <img src="./images/1-1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">初中语法汇总 （时态）</h5>
             <p class="card-text">我不想写这个简介。。。</p>
@@ -43,7 +43,7 @@
       </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="./images/1-2.png" class="card-img-top" style="height: 7rem;" alt="...">
+          <img src="./images/1-2.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">初中语法汇总 （词法）</h5>
             <p class="card-text">我不想写这个简介。。。</p>
@@ -53,7 +53,7 @@
       </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="./images/1-3.png" class="card-img-top" style="height: 7rem;" alt="...">
+          <img src="./images/1-3.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">初中语法汇总 （句法+语态）</h5>
             <p class="card-text">我不想写这个简介。。。</p>
