--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     </div>
   </nav>
 
-  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
     <div class="toast-header">
-      <img src="..." class="rounded me-2" alt="...">
       <strong class="me-auto">来自 李沛霖</strong>
       <small>刚刚</small>
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -102,5 +101,10 @@
   </footer>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script>
+    $(document).ready(function () {
+      $(".toast").toast("show");
+    });
+  </script>
 </body>
 </html>
