submit by DreamAway

--- a/index.html
+++ b/index.html
@@ -15,18 +15,12 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">英语思维导图</a>
     </div>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <span class="navbar-text">
+        <a href="./OPML/OPML.7z" download="初中语法汇总（三张思维导图）.7z" class="nav-link">下载OPML文件</a>
+      </span>
+    </div>
   </nav>
-
-  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
-    <div class="toast-header">
-      <strong class="me-auto">来自 李沛霖</strong>
-      <small>刚刚</small>
-      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-    <div class="toast-body">
-      思维导图纯手工制作，未经授权不得转载，转载请注明出处。
-    </div>
-  </div>
 
   <div class="container">
     <div class="row">
@@ -37,6 +31,7 @@
             <h5 class="card-title">初中语法汇总 （时态）</h5>
             <p class="card-text">我不想写这个简介。。。</p>
             <a href="./mindmap/page1-0.html" class="btn btn-primary">查看思维导图</a>
+            <a href="./mindmap/mm2-0.opml" download="初中语法汇总 （时态）" class="btn btn-primary">下载文件</a>
           </div>
         </div>
       </div>
@@ -47,6 +42,7 @@
             <h5 class="card-title">初中语法汇总 （词法）</h5>
             <p class="card-text">我不想写这个简介。。。</p>
             <a href="./mindmap/page1-1.html" class="btn btn-primary">查看思维导图</a>
+            <a href="./mindmap/mm2-1.opml" download="初中语法汇总 （词法）" class="btn btn-primary">下载文件</a>
           </div>
         </div>
       </div>
@@ -57,6 +53,7 @@
             <h5 class="card-title">初中语法汇总 （句法+语态）</h5>
             <p class="card-text">我不想写这个简介。。。</p>
             <a href="./mindmap/page1-2.html" class="btn btn-primary">查看思维导图</a>
+            <a href="./mindmap/mm2-2.opml" download="初中语法汇总 （句法+语态）" class="btn btn-primary">下载文件</a>
           </div>
         </div>
       </div>
