submit by DreamAway

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="collapse navbar-collapse" id="navbarText">
       <span class="navbar-text">
-        <a href="./OPML/OPML.7z" download="初中语法汇总（三张思维导图）.7z" class="nav-link">下载OPML文件</a>
+        <a href="./OPML/OPML.7z" download="初中语法汇总（三张思维导图）.7z" style="width: 150px;" class="nav-link">下载OPML文件</a>
       </span>
     </div>
   </nav>
