submit by DreamAway

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="collapse navbar-collapse" id="navbarText">
       <span class="navbar-text">
-        <a href="./OPML/OPML.7z" download="初中语法汇总（三张思维导图）.7z" style="width: 150px;" class="nav-link">下载OPML文件</a>
+        <a href="./初中语法汇总  （三张思维导图）.zip" download="初中语法汇总（三张思维导图）.zip" style="width: 115px;" class="nav-link">下载源文件</a>
       </span>
     </div>
   </nav>
@@ -31,7 +31,7 @@
             <h5 class="card-title">初中语法汇总 （时态）</h5>
             <p class="card-text">我不想写这个简介。。。</p>
             <a href="./mindmap/page1-0.html" class="btn btn-primary">查看思维导图</a>
-            <a href="./mindmap/mm2-0.opml" download="初中语法汇总 （时态）" class="btn btn-primary">下载文件</a>
+            <a href="./mindmap/初中语法汇总  （时态）.zip" download="初中语法汇总 （时态）.zip" class="btn btn-primary">下载源文件</a>
           </div>
         </div>
       </div>
@@ -42,7 +42,7 @@
             <h5 class="card-title">初中语法汇总 （词法）</h5>
             <p class="card-text">我不想写这个简介。。。</p>
             <a href="./mindmap/page1-1.html" class="btn btn-primary">查看思维导图</a>
-            <a href="./mindmap/mm2-1.opml" download="初中语法汇总 （词法）" class="btn btn-primary">下载文件</a>
+            <a href="./mindmap/初中语法汇总 （词法）.zip" download="初中语法汇总 （词法）.zip" class="btn btn-primary">下载源文件</a>
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@
             <h5 class="card-title">初中语法汇总 （句法+语态）</h5>
             <p class="card-text">我不想写这个简介。。。</p>
             <a href="./mindmap/page1-2.html" class="btn btn-primary">查看思维导图</a>
-            <a href="./mindmap/mm2-2.opml" download="初中语法汇总 （句法+语态）" class="btn btn-primary">下载文件</a>
+            <a href="./mindmap/初中语法汇总 （句法+语态）.zip" download="初中语法汇总 （句法+语态）.zip" class="btn btn-primary">下载源文件</a>
           </div>
         </div>
       </div>
