submit by DreamAway

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2022 Copyright:
-      <a class="text-white" href="https://www.jinjieup.tk/eng_mmap">www.jinjieup.tk</a>
+      <a class="text-white" href="https://www.jinjieup.tk/">www.jinjieup.tk</a>
     </div>
     <!-- Copyright -->
   </footer>
