submit by DreamAway

--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
     </div>
   </nav>
 
-  <ul class="nav nav-tabs" id="myTab" role="tablist">
-    <li class="nav-item">
-      <a class="nav-link active" id="policy" data-toggle="tab" href="#policy-tab" role="tab" aria-controls="policy-tab" aria-selected="true">思维导图使用政策</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" id="mmap" data-toggle="tab" href="#mmap-tab" role="tab" aria-controls="mmap-tab" aria-selected="false">思维导图</a>
-    </li>
-  </ul>
+  <nav>
+    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+      <a class="nav-link nav-item active" id="policy" data-toggle="tab" href="#policy-tab" role="tab" aria-controls="policy-tab" aria-selected="true">思维导图使用政策</a>
+      <a class="nav-link nav-item" id="mmap" data-toggle="tab" href="#mmap-tab" role="tab" aria-controls="mmap-tab" aria-selected="false">思维导图</a>
+    </div>
+  </nav>
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="policy-tab" role="tabpanel" aria-labelledby="policy">
       <div class="card mb-3" style="max-width: 540px;">
