--- a/index.html
+++ b/index.html
@@ -1,135 +1,211 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>英语思维导图 - 初中语法梳理</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>英语思维导图 - 初中语法梳理</title>
 
-  <link rel="stylesheet" href="./index.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">英语思维导图</a>
-    </div>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <span class="navbar-text">
-        <a href="./初中语法汇总  （三张思维导图）.zip" download="初中语法汇总（三张思维导图）.zip" style="width: 115px;" class="nav-link">下载源文件</a>
-      </span>
-    </div>
-  </nav>
+    <link rel="stylesheet" href="./index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">英语思维导图</a>
+      </div>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <span class="navbar-text">
+          <a
+            href="./初中语法汇总  （三张思维导图）.zip"
+            download="初中语法汇总（三张思维导图）.zip"
+            style="width: 115px"
+            class="nav-link"
+            >下载源文件</a
+          >
+        </span>
+      </div>
+    </nav>
 
-  <nav>
-    <div class="nav nav-tabs" id="nav-tab" role="tablist">
-      <a class="nav-link nav-item active" id="policy" data-toggle="tab" href="#policy-tab" role="tab" aria-controls="policy-tab" aria-selected="true">思维导图使用政策</a>
-      <a class="nav-link nav-item" id="mmap" data-toggle="tab" href="#mmap-tab" role="tab" aria-controls="mmap-tab" aria-selected="false">思维导图</a>
-    </div>
-  </nav>
-  <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="policy-tab" role="tabpanel" aria-labelledby="policy">
-      <div class="card mb-3" style="max-width: 540px;">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <img src="./images/0-2.png" class="card-img" alt="...">
+    <div class="container">
+      <ul class="nav nav-tabs">
+        <li class="active">
+          <a data-toggle="tab" href="#policy">思维导图使用政策</a>
+        </li>
+        <li><a data-toggle="tab" href="#mmap">思维导图</a></li>
+      </ul>
+
+      <div class="tab-content">
+        <div id="policy" class="tab-pane fade in active">
+          <div class="card mb-3" style="max-width: 540px">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="./images/0-2.png" class="card-img" alt="..." />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">思维导图使用政策</h5>
+                  <p class="card-text">
+                    网站地址:
+                    <a href="http://mmap.jinjieup.tk/"
+                      >http://mmap.jinjieup.tk/</a
+                    >
+                  </p>
+                  <p class="card-text">
+                    思维导图全部为个人整理并制作，未经授权请勿私自转载，转载请注明出处
+                  </p>
+                  <p class="card-text">
+                    思维导图基本.上涵盖了所有初中英语知识，可作为个人学习用途，下载文件后请在24小时内删除
+                  </p>
+                  <p class="card-text">
+                    网站采用Bootstrap框架搭建，网站源代码已公布于
+                    <a href="https://github.com/jinjieup/eng_mmap">GitHub</a>
+                    ,源代码采用Apache 2.0许可证
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted"
+                      >请遵守思维导图使用政策，若一经发现违规使用，后果自负！</small
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">思维导图使用政策</h5>
-              <p class="card-text">网站地址: 
-                <a href="http://mmap.jinjieup.tk/">http://mmap.jinjieup.tk/</a>
-              </p>
-              <p class="card-text">思维导图全部为个人整理并制作，未经授权请勿私自转载，转载请注明出处</p>
-              <p class="card-text">思维导图基本.上涵盖了所有初中英语知识，可作为个人学习用途，下载文件后请在24小时内删除</p>
-              <p class="card-text">网站采用Bootstrap框架搭建，网站源代码已公布于
-                  <a href="https://github.com/jinjieup/eng_mmap">GitHub</a>
-                ,源代码采用Apache 2.0许可证</p>
-              <p class="card-text"><small class="text-muted">请遵守思维导图使用政策，若一经发现违规使用，后果自负！</small></p>
+        </div>
+        <div id="mmap" class="tab-pane fade">
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="card" style="width: 18rem">
+                  <img src="./images/1-1.png" class="card-img-top" alt="..." />
+                  <div class="card-body">
+                    <h5 class="card-title">初中语法汇总 （时态）</h5>
+                    <p class="card-text">我不想写这个简介。。。</p>
+                    <a href="./mindmap/page1-0.html" class="btn btn-primary"
+                      >查看思维导图</a
+                    >
+                    <a
+                      href="./mindmap/初中语法汇总  （时态）.zip"
+                      download="初中语法汇总 （时态）.zip"
+                      class="btn btn-primary"
+                      >下载源文件</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem">
+                  <img src="./images/1-2.png" class="card-img-top" alt="..." />
+                  <div class="card-body">
+                    <h5 class="card-title">初中语法汇总 （词法）</h5>
+                    <p class="card-text">我不想写这个简介。。。</p>
+                    <a href="./mindmap/page1-1.html" class="btn btn-primary"
+                      >查看思维导图</a
+                    >
+                    <a
+                      href="./mindmap/初中语法汇总 （词法）.zip"
+                      download="初中语法汇总 （词法）.zip"
+                      class="btn btn-primary"
+                      >下载源文件</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem">
+                  <img src="./images/1-3.png" class="card-img-top" alt="..." />
+                  <div class="card-body">
+                    <h5 class="card-title">初中语法汇总 （句法+语态）</h5>
+                    <p class="card-text">我不想写这个简介。。。</p>
+                    <a href="./mindmap/page1-2.html" class="btn btn-primary"
+                      >查看思维导图</a
+                    >
+                    <a
+                      href="./mindmap/初中语法汇总 （句法+语态）.zip"
+                      download="初中语法汇总 （句法+语态）.zip"
+                      class="btn btn-primary"
+                      >下载源文件</a
+                    >
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="tab-pane fade" id="mmap-tab" role="tabpanel" aria-labelledby="mmap">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-              <img src="./images/1-1.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">初中语法汇总 （时态）</h5>
-                <p class="card-text">我不想写这个简介。。。</p>
-                <a href="./mindmap/page1-0.html" class="btn btn-primary">查看思维导图</a>
-                <a href="./mindmap/初中语法汇总  （时态）.zip" download="初中语法汇总 （时态）.zip" class="btn btn-primary">下载源文件</a>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-              <img src="./images/1-2.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">初中语法汇总 （词法）</h5>
-                <p class="card-text">我不想写这个简介。。。</p>
-                <a href="./mindmap/page1-1.html" class="btn btn-primary">查看思维导图</a>
-                <a href="./mindmap/初中语法汇总 （词法）.zip" download="初中语法汇总 （词法）.zip" class="btn btn-primary">下载源文件</a>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-              <img src="./images/1-3.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">初中语法汇总 （句法+语态）</h5>
-                <p class="card-text">我不想写这个简介。。。</p>
-                <a href="./mindmap/page1-2.html" class="btn btn-primary">查看思维导图</a>
-                <a href="./mindmap/初中语法汇总 （句法+语态）.zip" download="初中语法汇总 （句法+语态）.zip" class="btn btn-primary">下载源文件</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <footer class="bg-dark text-center text-white" style="margin-top: 5rem;">
-    <!-- Grid container -->
-    <div class="container p-4 pb-0">
-      <!-- Section: Social media -->
-      <section class="mb-4">
-        <!-- Facebook -->
-        <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/lipeilin375" role="button">
-          <i class="bi bi-facebook"></i>
-        </a>
-  
-        <!-- Twitter -->
-        <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/LiPeilin14" role="button">
-          <i class="bi bi-twitter"></i>
-        </a>
-  
-        <!-- Instagram -->
-        <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/lipeilin375/" role="button">
-          <i class="bi bi-instagram"></i>
-        </a>
-  
-        <!-- Github -->
-        <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/jinjieup" role="button">
-          <i class="bi bi-github"></i>
-        </a>
-      </section>
-      <!-- Section: Social media -->
-    </div>
-    <!-- Grid container -->
-  
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2022 Copyright:
-      <a class="text-white" href="https://www.jinjieup.tk/">www.jinjieup.tk</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    <footer class="bg-dark text-center text-white" style="margin-top: 5rem">
+      <!-- Grid container -->
+      <div class="container p-4 pb-0">
+        <!-- Section: Social media -->
+        <section class="mb-4">
+          <!-- Facebook -->
+          <a
+            class="btn btn-outline-light btn-floating m-1"
+            href="https://www.facebook.com/lipeilin375"
+            role="button"
+          >
+            <i class="bi bi-facebook"></i>
+          </a>
+
+          <!-- Twitter -->
+          <a
+            class="btn btn-outline-light btn-floating m-1"
+            href="https://twitter.com/LiPeilin14"
+            role="button"
+          >
+            <i class="bi bi-twitter"></i>
+          </a>
+
+          <!-- Instagram -->
+          <a
+            class="btn btn-outline-light btn-floating m-1"
+            href="https://www.instagram.com/lipeilin375/"
+            role="button"
+          >
+            <i class="bi bi-instagram"></i>
+          </a>
+
+          <!-- Github -->
+          <a
+            class="btn btn-outline-light btn-floating m-1"
+            href="https://github.com/jinjieup"
+            role="button"
+          >
+            <i class="bi bi-github"></i>
+          </a>
+        </section>
+        <!-- Section: Social media -->
+      </div>
+      <!-- Grid container -->
+
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+        © 2022 Copyright:
+        <a class="text-white" href="https://www.jinjieup.tk/"
+          >www.jinjieup.tk</a
+        >
+      </div>
+      <!-- Copyright -->
+    </footer>
+
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  </body>
 </html>
