--- a/index.html
+++ b/index.html
@@ -36,106 +36,133 @@
       </div>
     </nav>
 
-    <div class="container">
-      <ul class="nav nav-tabs">
-        <li class="active">
-          <a data-toggle="tab" href="#policy">思维导图使用政策</a>
-        </li>
-        <li><a data-toggle="tab" href="#mmap">思维导图</a></li>
-      </ul>
-
-      <div class="tab-content">
-        <div id="policy" class="tab-pane fade in active">
-          <div class="card mb-3" style="max-width: 540px">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="./images/0-2.png" class="card-img" alt="..." />
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">思维导图使用政策</h5>
-                  <p class="card-text">
-                    网站地址:
-                    <a href="http://mmap.jinjieup.tk/"
-                      >http://mmap.jinjieup.tk/</a
-                    >
-                  </p>
-                  <p class="card-text">
-                    思维导图全部为个人整理并制作，未经授权请勿私自转载，转载请注明出处
-                  </p>
-                  <p class="card-text">
-                    思维导图基本.上涵盖了所有初中英语知识，可作为个人学习用途，下载文件后请在24小时内删除
-                  </p>
-                  <p class="card-text">
-                    网站采用Bootstrap框架搭建，网站源代码已公布于
-                    <a href="https://github.com/jinjieup/eng_mmap">GitHub</a>
-                    ,源代码采用Apache 2.0许可证
-                  </p>
-                  <p class="card-text">
-                    <small class="text-muted"
-                      >请遵守思维导图使用政策，若一经发现违规使用，后果自负！</small
-                    >
-                  </p>
-                </div>
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <li class="nav-item">
+        <a
+          class="nav-link active"
+          id="home-tab"
+          data-toggle="tab"
+          href="#home"
+          role="tab"
+          aria-controls="home"
+          aria-selected="true"
+          >思维导图使用政策</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          id="profile-tab"
+          data-toggle="tab"
+          href="#profile"
+          role="tab"
+          aria-controls="profile"
+          aria-selected="false"
+          >思维导图</a
+        >
+      </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+      <div
+        class="tab-pane fade show active"
+        id="home"
+        role="tabpanel"
+        aria-labelledby="home-tab"
+      >
+        <div class="card mb-3" style="max-width: 540px">
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <img src="./images/0-2.png" class="card-img" alt="..." />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">思维导图使用政策</h5>
+                <p class="card-text">
+                  网站地址:
+                  <a href="http://mmap.jinjieup.tk/"
+                    >http://mmap.jinjieup.tk/</a
+                  >
+                </p>
+                <p class="card-text">
+                  思维导图全部为个人整理并制作，未经授权请勿私自转载，转载请注明出处
+                </p>
+                <p class="card-text">
+                  思维导图基本.上涵盖了所有初中英语知识，可作为个人学习用途，下载文件后请在24小时内删除
+                </p>
+                <p class="card-text">
+                  网站采用Bootstrap框架搭建，网站源代码已公布于
+                  <a href="https://github.com/jinjieup/eng_mmap">GitHub</a>
+                  ,源代码采用Apache 2.0许可证
+                </p>
+                <p class="card-text">
+                  <small class="text-muted"
+                    >请遵守思维导图使用政策，若一经发现违规使用，后果自负！</small
+                  >
+                </p>
               </div>
             </div>
           </div>
         </div>
-        <div id="mmap" class="tab-pane fade">
-          <div class="container">
-            <div class="row">
-              <div class="col">
-                <div class="card" style="width: 18rem">
-                  <img src="./images/1-1.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <h5 class="card-title">初中语法汇总 （时态）</h5>
-                    <p class="card-text">我不想写这个简介。。。</p>
-                    <a href="./mindmap/page1-0.html" class="btn btn-primary"
-                      >查看思维导图</a
-                    >
-                    <a
-                      href="./mindmap/初中语法汇总  （时态）.zip"
-                      download="初中语法汇总 （时态）.zip"
-                      class="btn btn-primary"
-                      >下载源文件</a
-                    >
-                  </div>
+      </div>
+      <div
+        class="tab-pane fade"
+        id="profile"
+        role="tabpanel"
+        aria-labelledby="profile-tab"
+      >
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="card" style="width: 18rem">
+                <img src="./images/1-1.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">初中语法汇总 （时态）</h5>
+                  <p class="card-text">我不想写这个简介。。。</p>
+                  <a href="./mindmap/page1-0.html" class="btn btn-primary"
+                    >查看思维导图</a
+                  >
+                  <a
+                    href="./mindmap/初中语法汇总  （时态）.zip"
+                    download="初中语法汇总 （时态）.zip"
+                    class="btn btn-primary"
+                    >下载源文件</a
+                  >
                 </div>
               </div>
-              <div class="col">
-                <div class="card" style="width: 18rem">
-                  <img src="./images/1-2.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <h5 class="card-title">初中语法汇总 （词法）</h5>
-                    <p class="card-text">我不想写这个简介。。。</p>
-                    <a href="./mindmap/page1-1.html" class="btn btn-primary"
-                      >查看思维导图</a
-                    >
-                    <a
-                      href="./mindmap/初中语法汇总 （词法）.zip"
-                      download="初中语法汇总 （词法）.zip"
-                      class="btn btn-primary"
-                      >下载源文件</a
-                    >
-                  </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 18rem">
+                <img src="./images/1-2.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">初中语法汇总 （词法）</h5>
+                  <p class="card-text">我不想写这个简介。。。</p>
+                  <a href="./mindmap/page1-1.html" class="btn btn-primary"
+                    >查看思维导图</a
+                  >
+                  <a
+                    href="./mindmap/初中语法汇总 （词法）.zip"
+                    download="初中语法汇总 （词法）.zip"
+                    class="btn btn-primary"
+                    >下载源文件</a
+                  >
                 </div>
               </div>
-              <div class="col">
-                <div class="card" style="width: 18rem">
-                  <img src="./images/1-3.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <h5 class="card-title">初中语法汇总 （句法+语态）</h5>
-                    <p class="card-text">我不想写这个简介。。。</p>
-                    <a href="./mindmap/page1-2.html" class="btn btn-primary"
-                      >查看思维导图</a
-                    >
-                    <a
-                      href="./mindmap/初中语法汇总 （句法+语态）.zip"
-                      download="初中语法汇总 （句法+语态）.zip"
-                      class="btn btn-primary"
-                      >下载源文件</a
-                    >
-                  </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 18rem">
+                <img src="./images/1-3.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">初中语法汇总 （句法+语态）</h5>
+                  <p class="card-text">我不想写这个简介。。。</p>
+                  <a href="./mindmap/page1-2.html" class="btn btn-primary"
+                    >查看思维导图</a
+                  >
+                  <a
+                    href="./mindmap/初中语法汇总 （句法+语态）.zip"
+                    download="初中语法汇总 （句法+语态）.zip"
+                    class="btn btn-primary"
+                    >下载源文件</a
+                  >
                 </div>
               </div>
             </div>
