submit by DreamAway

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </div>
     </nav>
 
-    <ul class="nav nav-tabs" id="myTab" role="tablist">
-      <li class="nav-item">
+    <nav class="nav nav-tabs" id="myTab" role="tablist">
+      <div class="nav nav-tabs" id="nav-tab" role="tablist">
         <a
           class="nav-link active"
           id="home-tab"
@@ -48,8 +48,6 @@
           aria-selected="true"
           >思维导图使用政策</a
         >
-      </li>
-      <li class="nav-item">
         <a
           class="nav-link"
           id="profile-tab"
@@ -60,8 +58,8 @@
           aria-selected="false"
           >思维导图</a
         >
-      </li>
-    </ul>
+      </div>
+    </nav>
     <div class="tab-content" id="myTabContent">
       <div
         class="tab-pane fade show active"
