--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     
       <!-- Tab panes -->
       <div class="tab-content">
-        <div id="home" class="container tab-pane active"><br>
-          <div class="card mb-3" style="max-width: 540px">
+        <div id="home" class="container tab-pane active" style="padding:3%;"><br>
+          <div class="card mb-3" style="max-width: 100%">
               <div class="row no-gutters">
                 <div class="col-md-4">
                   <img src="./images/0-2.png" class="card-img" alt="..." />
@@ -91,7 +91,7 @@
         <div id="menu1" class="container tab-pane fade"><br>
           <div class="container">
               <div class="row">
-                <div class="col">
+                <div class="col" style="margin-bottom: 2rem;">
                   <div class="card" style="width: 18rem">
                     <img src="./images/1-1.png" class="card-img-top" alt="..." />
                     <div class="card-body">
@@ -109,7 +109,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col" style="margin-bottom: 2rem;">
                   <div class="card" style="width: 18rem">
                     <img src="./images/1-2.png" class="card-img-top" alt="..." />
                     <div class="card-body">
@@ -127,7 +127,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col" style="margin-bottom: 2rem;">
                   <div class="card" style="width: 18rem">
                     <img src="./images/1-3.png" class="card-img-top" alt="..." />
                     <div class="card-body">
